--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
         versionName "1.0"
         multiDexEnabled true
 
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -80,6 +79,13 @@ dependencies {
 
     // Lottie
     implementation "com.airbnb.android:lottie:3.4.0"
+
+    // Room
+    def room_version = "2.3.0"
+
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
 
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
