--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name = ".Application"
+        android:name = ".ApplicationComponent"
         android:theme="@style/Theme.Cinemobile">
         <activity android:name=".view.MainActivity">
             <intent-filter>
