--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,17 @@ plugins {
     id 'kotlin-android'
     id("kotlin-kapt")
     id("dagger.hilt.android.plugin")
-    id 'androidx.navigation.safeargs'
     id 'kotlin-parcelize'
-
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.pandorina.cinemobile"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -31,7 +29,7 @@ android {
     }
 
     buildFeatures{
-        viewBinding = true
+        viewBinding  true
     }
 
     compileOptions {
@@ -46,8 +44,8 @@ android {
 
 dependencies {
     // Navigation Graph
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha06'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -61,6 +59,10 @@ dependencies {
 
     // Live data
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+
+    // View model
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -82,20 +84,21 @@ dependencies {
 
     // Room
     def room_version = "2.3.0"
-
-    implementation 'androidx.room:room-ktx:2.3.0'
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
 
     // Recycler cover flow
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
 
-    implementation 'com.ccy:FocusLayoutManager:1.0.2'
+    // Custom button
+    implementation 'com.github.medyo:fancybuttons:1.9.1'
 
+    // Custom chip group
+    implementation "com.robertlevonyan.view:MaterialChipView:2.2.7"
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    // Custom spinner
+    implementation "com.github.skydoves:powerspinner:1.1.9"
 
 
 
@@ -103,7 +106,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
