--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,9 @@ dependencies {
     // Custom spinner
     implementation "com.github.skydoves:powerspinner:1.1.9"
 
+    // Blur transformation
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
